Close to success

--- a/android/hug/app/src/main/AndroidManifest.xml
+++ b/android/hug/app/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
             android:theme="@style/AppThemeNoToolbar" />
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeNoToolbar"/>
+            android:theme="@style/AppThemeNoToolbar"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 
